--- a/.babelrc
+++ b/.babelrc
@@ -4,14 +4,15 @@
  * 相当于import Button from 'antd/lib/button'
  */
 {
-    "presets": ["next/babel"],
-    "plugins": [
-        [
-            "import",
-            {
-                "libraryName": "antd"
-                // "style": "css" // css分模块加载
-            }
-        ]
-    ]
+  "presets": ["next/babel"],
+  "plugins": [
+    [
+      "import",
+      {
+        "libraryName": "antd"
+        // "style": "css" // css分模块加载
+      }
+    ],
+    ["styled-components", { "ssr": true }]
+  ]
 }
