--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
-    "name": "github-next",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "dev": "next",
-        "build": "next build",
-        "start": "next start"
-    },
-    "dependencies": {
-        "@zeit/next-css": "^1.0.1",
-        "antd": "^3.23.4",
-        "babel-plugin-import": "^1.12.1",
-        "ioredis": "^4.14.1",
-        "koa": "^2.8.1",
-        "koa-router": "^7.4.0",
-        "next": "9.0.6",
-        "react": "16.9.0",
-        "react-dom": "16.9.0"
-    }
+  "name": "github-next",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next",
+    "build": "next build",
+    "start": "next start"
+  },
+  "dependencies": {
+    "@zeit/next-css": "^1.0.1",
+    "antd": "^3.23.4",
+    "babel-plugin-import": "^1.12.1",
+    "babel-plugin-styled-components": "^1.10.6",
+    "ioredis": "^4.14.1",
+    "koa": "^2.8.1",
+    "koa-router": "^7.4.0",
+    "moment": "^2.24.0",
+    "next": "9.0.6",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
+    "styled-components": "^4.3.2"
+  }
 }
