--- a/package.json
+++ b/package.json
@@ -19,6 +19,12 @@
     "next": "9.0.6",
     "react": "16.9.0",
     "react-dom": "16.9.0",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^4.3.2"
+  },
+  "devDependencies": {
+    "redux-devtools-extension": "^2.13.8"
   }
 }
