--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ioredis": "^4.14.1",
     "koa": "^2.8.1",
     "koa-router": "^7.4.0",
+    "koa-session": "^5.12.3",
     "moment": "^2.24.0",
     "next": "9.0.6",
     "react": "16.9.0",
