--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "antd": "^3.23.4",
+    "axios": "^0.19.0",
     "babel-plugin-import": "^1.12.1",
     "babel-plugin-styled-components": "^1.10.6",
     "ioredis": "^4.14.1",
