--- a/package.json
+++ b/package.json
@@ -1,34 +1,40 @@
 {
-  "name": "github-next",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "@zeit/next-css": "^1.0.1",
-    "antd": "^3.26.3",
-    "axios": "^0.19.0",
-    "babel-plugin-import": "^1.12.1",
-    "babel-plugin-styled-components": "^1.10.6",
-    "ioredis": "^4.14.1",
-    "koa": "^2.8.1",
-    "koa-body": "^4.1.1",
-    "koa-router": "^7.4.0",
-    "koa-session": "^5.12.3",
-    "lru-cache": "^5.1.1",
-    "moment": "^2.24.0",
-    "next": "9.0.6",
-    "react": "16.9.0",
-    "react-dom": "16.9.0",
-    "react-redux": "^7.1.1",
-    "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0",
-    "styled-components": "^4.3.2"
-  },
-  "devDependencies": {
-    "redux-devtools-extension": "^2.13.8"
-  }
+    "name": "github-next",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next",
+        "build": "next build",
+        "start": "next start",
+        "analyze:browser": "cross-env BUNDLE_ANALYZE=browser next build"
+    },
+    "dependencies": {
+        "@zeit/next-bundle-analyzer": "^0.1.2",
+        "@zeit/next-css": "^1.0.1",
+        "antd": "^3.26.3",
+        "atob": "^2.1.2",
+        "axios": "^0.19.0",
+        "babel-plugin-import": "^1.12.1",
+        "babel-plugin-styled-components": "^1.10.6",
+        "cross-env": "^6.0.3",
+        "github-markdown-css": "^3.0.1",
+        "ioredis": "^4.14.1",
+        "koa": "^2.8.1",
+        "koa-body": "^4.1.1",
+        "koa-router": "^7.4.0",
+        "koa-session": "^5.12.3",
+        "lru-cache": "^5.1.1",
+        "markdown-it": "^10.0.0",
+        "moment": "^2.24.0",
+        "next": "9.0.6",
+        "react": "16.9.0",
+        "react-dom": "16.9.0",
+        "react-redux": "^7.1.1",
+        "redux": "^4.0.4",
+        "redux-thunk": "^2.3.0",
+        "styled-components": "^4.3.2"
+    },
+    "devDependencies": {
+        "redux-devtools-extension": "^2.13.8"
+    }
 }
